--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.24.2",
     "@clerk/nextjs": "^6.12.5",
+    "@langchain/anthropic": "^0.3.17",
+    "@langchain/community": "^0.3.40",
+    "@langchain/core": "^0.3.44",
+    "@langchain/langgraph": "^0.2.63",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.20.0",
+    "langchain": "^0.3.21",
     "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "radix-ui": "^1.1.3",
