--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.24.2",
     "@clerk/nextjs": "^6.12.5",
-    "@huggingface/inference": "^3.11.0",
-    "@langchain/anthropic": "^0.3.17",
-    "@langchain/community": "^0.3.40",
-    "@langchain/core": "^0.3.44",
-    "@langchain/langgraph": "^0.2.63",
+    "@huggingface/inference": "^2.6.4",
+    "@langchain/anthropic": "^0.3.20",
+    "@langchain/community": "^0.3.42",
+    "@langchain/core": "^0.3.55",
+    "@langchain/langgraph": "^0.2.71",
+    "@langchain/openai": "^0.5.10",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
